--- a/css/loginPage.css
+++ b/css/loginPage.css
@@ -2,28 +2,38 @@
     margin: 0;
     padding: 0;
     font-size: 20;
+    overflow:hidden;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     
+}
+html::-webkit-scrollbar{
+    display: none;
+}
+
+html{
+    scrollbar-width: none;
 }
 body{
     width: 100vw;
     height: 100vh;
-    background-color: antiquewhite;
+
 }
 
-header{
-    border: 2px solid red;
-    height: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+main{
+    height:100%;
+    width: 100%;
+    background: url(../src/greg-rakozy-oMpAz-DN-9I-unsplash.jpg)center center no-repeat;
+    background-size: cover;
+    position: absolute;
 }
-.nav{
-    list-style: none;
+
+.login{
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
+    position: relative;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    border: 2px solid red;
+    border-radius: 2px;
 }
 
