--- a/css/loginPage.css
+++ b/css/loginPage.css
@@ -3,6 +3,8 @@
     padding: 0;
     font-size: 20;
     overflow:hidden;
+    user-select: none;
+    color: black;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     
 }
@@ -16,24 +18,85 @@ html{
 body{
     width: 100vw;
     height: 100vh;
-
-}
-
-main{
-    height:100%;
-    width: 100%;
     background: url(../src/greg-rakozy-oMpAz-DN-9I-unsplash.jpg)center center no-repeat;
     background-size: cover;
-    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.login{
+.wrapper{
+    border: 2px solid rgba(255,255,255, .2);
+    backdrop-filter: blur(1px);
+    border-radius: 10px;
+    padding: 30px 40px;
+    background: transparent;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, .2);
+    width:420px;
+
+}
+
+.wrapper h1{
+    text-align: center;
+    text-shadow: 0 0 4px rgb(255, 255, 255);
+}
+
+.btn{
+    color:black;
+    font-weight: 600;
+    font-size: large;
+    width:80%;
+    border-radius: 10px;
+    border-color: transparent;
+}
+ 
+.input-box{
+    width:100%;
+    min-height: 30px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    gap:20px;
+    position: relative;
+}
+
+.input-box input{
+    color:#fff;
+    padding-left: 10px;
+    border-radius: 10px;
+    border-color: transparent;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    width: 80%;
+
+}
+
+
+.input-box input::placeholder{
+    color: #fff;
+}
+
+.input-box i{
+    position: absolute;
+    height: 100%;
+    right: 10%;
+    top:25%;
+}
+form{
     display: flex;
     position: relative;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 2px solid red;
-    border-radius: 2px;
+    gap:20px;
+}
+
+.remember-forgot
+{
+    display: flex;
+    justify-content: space-between;
+    width:80%;
+    font-weight: 450;
 }
 
