--- a/css/HeaderSoloPage.css
+++ b/css/HeaderSoloPage.css
@@ -1,21 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Rubik+Doodle+Shadow&display=swap');
 
-*{
-    padding: 0px;
-    margin: 0px;
-    color: rgb(255, 255, 255);
-    font: 500;
-    font-size: 22px;
-    user-select: none;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-body{
-    overflow-x: hidden;
-}
-
 header{
     background-color: black;
+    width: 100%;
 }
 
 nav{
@@ -34,18 +21,18 @@ header>nav>ul{
     list-style: none;
     display: flex;
     flex-wrap: nowrap;
-    gap:20px;
+    gap: 20px;
     align-items: center;
 }
 
 header>nav>ul>li:last-child{
-    margin-left: 100px;
-    margin-right: 20px;
+    margin-left: 20px;
     cursor: pointer;
 }
 
 header>nav>ul>li>a{
     text-decoration: none;
+    text-wrap: nowrap;
 }
 
 
@@ -61,7 +48,11 @@ header>nav>ul>li>a{
     font-family: 'Dancing Script';
     font-size: 40px;
     text-decoration: none;
-    text-shadow: 2px 2px rgba(255, 234, 8, 0.539);
+    text-shadow: 1px 1px var(--main-yellow-color-capacity-75);
+}
+
+#listToggler{
+ display: flex;   
 }
 
 #nav__btn{
@@ -73,7 +64,7 @@ header>nav>ul>li>a{
 }
 
 #about{
-    background-color: blueviolet;
+    background-color: black;
 }
 
 #experience{
@@ -81,7 +72,7 @@ header>nav>ul>li>a{
 }
 
 #achivement{
-    background-color: burlywood;
+    background-color: var(--main-dark-color);
 }
 
 #history{
