--- a/css/MainSoloPage.css
+++ b/css/MainSoloPage.css
@@ -1,3 +1,91 @@
 .topic__section{
     display: flex;
+    justify-content: center;
+    text-decoration: underline;
+}
+
+.text-outline {
+    text-shadow:
+      0.5px 0 var(--main-yellow-color),
+      0 -0.5px var(--main-yellow-color),
+      -0.5px 0 var(--main-yellow-color),
+      0 0.5px var(--main-yellow-color);
+  }
+
+.text-shadowing{
+    text-shadow: var(--main-yellow-color) 1px 0 10px;
+}
+
+#myPhoto{
+    background-image: url(../src/aboutMe.jpg);
+    background-position: center center;
+    background-size: cover;
+    width: 100%;
+    height: auto;
+    border-radius: 50px;
+    text-shadow: white 10px 10px 10px;
+}
+
+/* img {
+	max-width: 100%;
+	height: auto;
+	display: inline-block;
+    border-radius: 10px;
+} */
+
+.circle{
+    width: 200px;
+    height: 200px;
+    background: teal;
+    -webkit-clip-path: circle(30% at 50% 50%);
+            clip-path: circle(30% at 50% 50%);
+}
+
+.grid-wrapper {
+    height: 100%;
+    width: 100%;
+	display: grid;
+    padding: 10px;
+	grid-gap: 10px;
+	grid-template-columns: minmax(min-content, 50%) 1fr;
+    grid-template-rows: minmax(min-content, 50%) 1fr;
+}
+
+
+.grid-wrapper>div{
+    border: 2px solid purple;
+}
+
+.grid-wrapper>div:nth-child(1){
+    display: flex;
+    justify-content: center;
+}
+
+.grid-wrapper .wide {
+	grid-column: span 2;
+}
+.grid-wrapper .tall {
+	grid-row: span 2;
+}
+.grid-wrapper .big {
+	grid-column: span 2;
+	grid-row: span 2;
+}
+.grid-wrapper .normal {
+	grid-column: span 1;
+	grid-row: span 1;
+}
+
+.cards{
+    display: inline-flex;
+    overflow-x: hidden;
+    gap: 20px;
+}
+
+.card-item{
+    width: 300px;
+    height: 400px;
+    border: 2px solid red;
+    overflow-x: hidden;
+    border-radius: 10px;
 }
