--- a/css/MainSoloPage.css
+++ b/css/MainSoloPage.css
@@ -1,7 +1,17 @@
+.main__section{
+    background-color: var(--main-dark-color);
+    height: 100vh;
+    width: 100vw;
+    border: 2px solid green;
+    padding-inline: 5%;
+}
+
 .topic__section{
     display: flex;
     justify-content: center;
     text-decoration: underline;
+    font-family: 'Comfortaa', sans-serif;
+
 }
 
 .text-outline {
@@ -23,7 +33,6 @@
     width: 100%;
     height: auto;
     border-radius: 50px;
-    text-shadow: white 10px 10px 10px;
 }
 
 /* img {
@@ -45,7 +54,6 @@
     height: 100%;
     width: 100%;
 	display: grid;
-    padding: 10px;
 	grid-gap: 10px;
 	grid-template-columns: minmax(min-content, 50%) 1fr;
     grid-template-rows: minmax(min-content, 50%) 1fr;
@@ -77,15 +85,71 @@
 }
 
 .cards{
-    display: inline-flex;
-    overflow-x: hidden;
-    gap: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width:80%;
+    height: 100%;
 }
 
+
 .card-item{
-    width: 300px;
-    height: 400px;
-    border: 2px solid red;
+    display: none;
+    width: 100%;
+    height: 90%;
+    border: 2px solid rgb(162, 255, 56);
     overflow-x: hidden;
     border-radius: 10px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 30% 70%;
+    justify-content: center;
+    padding:5% 10%;
+    
+}
+
+.active{
+    display: grid;
+}
+
+.card-name{
+    display: flex;
+    font-family: 'Comfortaa', sans-serif;
+    font-size: clamp(1rem, 4vw, 3rem);
+    text-decoration: underline wavy 2px;
+    text-underline-offset: 5vh;
+    border: 2px solid green;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-description{
+    border: 2px solid green;
+    
+}
+
+.card__move{
+    height:80%;
+    background-color: transparent;
+}
+
+
+
+
+
+@keyframes rotate-90-bottom-cw {
+    0%{
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+        -webkit-transform-origin: bottom;
+        transform-origin: bottom;
+    }
+    100%{
+        -webkit-transform: rotate(90deg);
+        transform: rotate(90deg);
+        -webkit-transform-origin: bottom;
+        transform-origin: bottom;
+    }
 }
