--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Rubik+Doodle+Shadow&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap');
+
 *{
     padding: 0px;
     margin: 0px;
@@ -14,18 +17,22 @@ html{
     scroll-behavior: smooth;
 }
 :root{
-    --header-font-size: clamp(14px,2px,22px);
+    --basic-font-size: clamp(14px,2px,22px);
     --main-yellow-color: rgb(229, 255, 0);
     --main-yellow-color-capacity-75: rgba(229, 255, 0, 0.75);
     --main-dark-color: #0f0f0f;
+    --header-height: 60px;
 }
 
 body{
-    
     width: 100%;
     height: 100%;
-    
+    overflow-x: hidden;
+    background-color: var(--main-dark-color);
 }
+
+
+
 ::-webkit-scrollbar{
     display: none;
 }
